Message Queue implementation using celery and redis

--- a/test.ipynb
+++ b/test.ipynb
@@ -100,6 +100,126 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from html.parser import HTMLParser\n",
+    "class HyperlinkParser(HTMLParser):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.hyperlinks = []\n",
+    "\n",
+    "    def handle_starttag(self, tag, attrs):\n",
+    "        attrs = dict(attrs)\n",
+    "\n",
+    "        if tag == \"a\" and \"href\" in attrs:   \n",
+    "            self.hyperlinks.append(attrs[\"href\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from urllib.parse import urlparse\n",
+    "import urllib.request\n",
+    "\n",
+    "def get_hyperlinks(url):\n",
+    "\n",
+    "    # Try to open the URL and read the HTML\n",
+    "    try:\n",
+    "        # Open the URL and read the HTML\n",
+    "        with urllib.request.urlopen(url) as response:\n",
+    "\n",
+    "            # If the response is not HTML, return an empty list\n",
+    "            if not response.info().get('Content-Type').startswith(\"text/html\"):\n",
+    "                return []\n",
+    "\n",
+    "            # Decode the HTML\n",
+    "            html = response.read().decode('utf-8')\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        return []\n",
+    "\n",
+    "    # Create the HTML Parser and then Parse the HTML to get hyperlinks\n",
+    "    parser = HyperlinkParser()\n",
+    "    parser.feed(html)\n",
+    "\n",
+    "    return parser.hyperlinks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HTTP_URL_PATTERN = r'^http[s]*://.+'\n",
+    "import re\n",
+    "\n",
+    "def get_domain_hyperlinks(local_domain, url):\n",
+    "    clean_links = []\n",
+    "    for link in set(get_hyperlinks(url)):\n",
+    "        clean_link = None\n",
+    "\n",
+    "        # If the link is a URL, check if it is within the same domain\n",
+    "        if re.search(HTTP_URL_PATTERN, link):\n",
+    "            # Parse the URL and check if the domain is the same\n",
+    "            url_obj = urlparse(link)\n",
+    "            # if url_obj.netloc == local_domain:\n",
+    "            #     clean_link = link\n",
+    "            clean_link = link\n",
+    "\n",
+    "        # If the link is not a URL, check if it is a relative link\n",
+    "        else:\n",
+    "            if link.startswith(\"/\"):\n",
+    "                link = link[1:]\n",
+    "            elif link.startswith(\"#\") or link.startswith(\"mailto:\"):\n",
+    "                continue\n",
+    "            clean_link = \"https://\" + local_domain + \"/\" + link\n",
+    "\n",
+    "        if clean_link is not None:\n",
+    "            if clean_link.endswith(\"/\"):\n",
+    "                clean_link = clean_link[:-1]\n",
+    "            clean_links.append(clean_link)\n",
+    "\n",
+    "    # Return the list of hyperlinks that are within the same domain\n",
+    "    return clean_links"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "domains = get_domain_hyperlinks('lobste','https://lobste.rs')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'https://jonathan-frere.com/posts/helix' in domains"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
